# cmux-hackathon-politicast

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  scratchpad.md
.claude/agents/: dashboard-engineer.md  data-engineer.md  kg-engineer.md  orchestrator.md  paper-writer.md  policy-engineer.md  sim-engineer.md
_archive/streamlit-2026-04-26/: README.md
_workspace/: TEMP-politikast-explanation-progress.md
_workspace/checkpoints/: capacity_probe.json  capacity_probe_v3_realistic.json  capacity_probe_v3_synthetic.json  policy.json  policy_log.md
_workspace/contracts/: api_contract.json  calibration_space.json  data_paths.json  llm_strategy.json  openapi.json  result_schema.json  sim_constants.json
_workspace/data/: news_seeds.json
_workspace/research/: cache_audit_v14.md  (+11 more)
alembic/: env.py
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  requirements.backend.txt  requirements.txt
docs/: adapters.md  architecture.md  deploy.md  research-summary.md
frontend/: .env.production  .eslintrc.cjs  .gitignore  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
paper/: elex-kg-final-ko.tex  elex-kg-final-ko.xdv  elex-kg-final.bib  elex-kg-final.tex  elex-kg-final.xdv
scripts/: diagnose_collapse.py  export_jsonschema.py  export_openapi.py  migrate_snapshots_v0_to_v1.py  run_pipeline.py  seed_ground_truth.py  v8_post_finalize.py  v8b_post_finalize.py  v8t_post_finalize.py  validate_scenarios.py  verify_llmpool_cost_guard.py
src/: __init__.py
tests/: conftest.py  test_readme_links.py
tools/: archive_streamlit.sh  init_mlflow_db.sh  migrate_duckdb_to_postgres.py  migrate_networkx_to_neo4j.py
ui/eda-explorer/backend/: README.md  app.py  db.py  models.py  pyproject.toml
ui/eda-explorer/backend/routers/: demographics.py  health.py  ontology.py  personas.py  regions.py  results.py
ui/eda-explorer/backend/tests/: test_smoke.py
(+741 files in other folders)
