[project]
name = "politikast"
version = "0.1.0"
description = "Political Knowledge-Augmented Multi-Agent Simulation of Voter Trajectories for Korean Local Elections"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Seongjin Lee", email = "sjlee@bhsn.ai" }]

dependencies = [
    # LLM stack
    "camel-ai>=0.2.90",
    "google-genai>=0.3.0",
    "litellm>=1.50.0",
    # Data
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    # KG
    "networkx>=3.2",
    # Backend (FastAPI + React)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    # DB drivers
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    "neo4j>=5.25.0",
    # Auth
    "pyjwt>=2.10.1",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

[tool.uv]
package = false
