[project]
name = "eda-explorer-api"
version = "0.1.0"
description = "Nemotron-Personas-Korea EDA + PolitiKAST 5-region API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "duckdb>=1.0",
    "pydantic>=2.6",
    "pyarrow>=15",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "db.py", "models.py", "routers"]
